# stac-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-redis  README.md  blob_mounting_configurations_template.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.docker/: Dockerfile
.github/workflows/: build-docker-images-on-release.yml  docker-build-prod.yml  docker-build-staging.yml
app/: main.py  redis_entrypoint.py
app/core/: dependencies.py  logger.py  main_router.py  redis.py
app/stac/: __init__.py  models.py  tasks.py  tests.py  views.py
app/stac/services/: file_operations.py  stac_item_creator.py  utils.py
app/stac/services/blob_mounting/: blob_mapping_utility.py
app/stac/services/metadata_parsers/: metadata_parser_manager.py  utils.py
app/stac/services/metadata_parsers/standard/: example_parser.py  maxar_parser.py  planet_parser.py
app/stac/services/publisher/: publisher_utility.py
app/tests/: test_stac.py
app/tests/data/: example_gdal_info.json
