[tool.poetry]
name = "stac-generator"
version = "0.1"
description = "A microservice designed to generate SpatioTemporal Asset Catalog (STAC) JSON from given file paths"
authors = ["James Hinton"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
orjson = "^3.8.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
uvicorn = "^0.18.3"
black = "^22.8.0"
pytest = "^7.1.3"
unittest2 = "^1.1.0"
loguru = "^0.6.0"
tenacity = "^8.0.1"
redis = "^4.5.5"
pystac = "^1.7.3"
rio-stac = "0.7.1"
rasterio = "^1.3.7"
rioxarray = "^0.12.1"
jsonschema = "^4.17.3"
blob-mounting-helper-utility = "1.1.0"

[pytest]
log_cli = true